# pr2-band

./: ProjectHome.md  README.md  ros_dev_builder.py
conductor/: CMakeLists.txt  mainpage.dox  manifest.xml  pr2_band joint_positions
conductor/config/: With_Or_Without_You.cfg  here_comes_the_sun_b.cfg
conductor/include/conductor/: arm.h  drummer.h  head.h
conductor/launch/: band.launch
conductor/msg/: Note.msg  Song.msg
conductor/songs/: Piano_Man_new.mid  With_Or_Without_You.mid  here_comes_the_sun_b.mid  here_comes_the_sun_b.rg
conductor/src/: arm.cpp  conductor.cpp  drummer.cpp  head.cpp  herecomesthesun2.mid  midi_player.py  pianist.cpp
pr2_poop_scoop/: revision.txt  ros_dev_builder.py
pr2_poop_scoop/perceive_poo/: CMakeLists.txt  i_see_poo.launch  mainpage.dox  manifest.xml  rgb2hue.py
pr2_poop_scoop/perceive_poo/include/: blob.h
pr2_poop_scoop/perceive_poo/scripts/: control_laser.py
pr2_poop_scoop/perceive_poo/src/: IteratedMean.cpp  perceive_poo.cpp  poo_blobs.cpp  poo_laser.cpp
pr2_poop_scoop/perceive_poo/src/Blob/: BlobContour.cpp
pr2_poop_scoop/poop_scoop/: CMakeLists.txt  manifest.xml  poops.txt
pr2_poop_scoop/poop_scoop/include/poop_scoop/: arm.h  gripper.h  head.h  scoop_placer.h  scooper.h  torso.h  visualize_arm.h
pr2_poop_scoop/poop_scoop/launch/: haptic_senses.launch  master.launch  move_base.launch  placer.launch  pr2_gripper_sensor_controller.launch  pr2_gripper_sensor_controller.yaml  record_arm_motion.launch  scooper.launch
pr2_poop_scoop/poop_scoop/maps/: L404.yaml  blank_map.yaml  lobby2.yaml
pr2_poop_scoop/poop_scoop/motions/: arm_positions.txt  arm_positions.txt.forward_wrist  arm_positions.txt.tested_80_percent_working  arm_positions.txt.works  arm_positions.txt.works_more_centered  start_scooper.txt  tucked_bucket.txt  tucked_scooper.txt
pr2_poop_scoop/poop_scoop/src/: arm.cpp  arm_motion_recorder.cpp  fake_perception.cpp  fake_perception.py  gripper.cpp  gripper_scooper_controller.py  gripper_scooper_controller_service.py  haptic_poop_drop_checker.py  head.cpp  main.py  perception_transformer.py  pose_gossip.py  scoop_placer.cpp  scooper.cpp  torso.cpp  visualize_arm.cpp
pr2_poop_scoop/poop_scoop/src/test/: gripper_scooper_controller_test.py  haptic_poop_drop_test.py  main_test.py
pr2_poop_scoop/poop_scoop/srv/: PointHead.srv  ScoopPlacerSrv.srv  Scooper.srv
pr2_poop_scoop/pr2_impeded_joint_detector/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
pr2_poop_scoop/pr2_impeded_joint_detector/include/pr2_impeded_joint_detector/: impeded_joint_detector.h  props_arm_controller.h  robot_arm.h
pr2_poop_scoop/pr2_impeded_joint_detector/launch/: arm_controller_error_limits.yaml  pr2_impeded_joint_detector.launch
pr2_poop_scoop/pr2_impeded_joint_detector/scripts/: genyaml.m  record_trajectory_bag.sh  rtpload.m
pr2_poop_scoop/pr2_impeded_joint_detector/src/: digitalFilter.cpp  impeded_joint_detector.cpp  props_arm_controller.cpp  robot_arm.cpp  wiggle.cpp
pr2_poop_scoop/pr2_navigation/pr2_navigation_config/move_base/: costmap_common_params.yaml  dwa_local_planner.yaml  move_base_params.yaml  pose_follower_local_planner.yaml  recovery_behaviors.yaml
pr2_poop_scoop/pr2_navigation/pr2_navigation_global/: move_base.xml
pr2_poop_scoop/pr2_navigation/pr2_navigation_perception/: lasers_and_filters.xml
pr2_poop_scoop/pr2_navigation/pr2_navigation_slam/: slam_gmapping.xml
pr2_poop_scoop/pr2_navigation/pr2_navigation_teleop/: teleop.xml
pr2_poop_scoop/sbpl_lattice_planner/: manifest.xml
pr2_poop_scoop/sbpl_lattice_planner/src/: sbpl_lattice_planner.cpp
pr2_sushi/sushi/: armarkers.yaml  objecttypes.yaml
pr2_sushi/sushi/src/: main.py  objdb.py  perception.py
pr2_sushi/util/src/: carrier.py  math.py  math_helpers.py  mathhelpers.py  simple_controllers.py  subscription_buffer.py  subscriptionbuffer.py  util_types.py  utiltypes.py  visualize.py  workplanner.py
pr2_sushi/util/src/simplecontrollers/: base.py  head.py  speech.py
